justerat bakgrundsfärg på mejlformuläret för desktop i darkmode

--- a/CSS/SCSS/colors/_colors.scss
+++ b/CSS/SCSS/colors/_colors.scss
@@ -17,6 +17,7 @@
     --color-headline: #131022;
     --color-btn-store: #131022;
     --color-btn-storetext: #fff;
+    --color-sub-form-bg: #ffffff;
     }
 
     .dark {
@@ -33,4 +34,5 @@
         --color-headline: #fff;
         --color-btn-store: #fff;
         --color-btn-storetext: #131022da;
+        --color-sub-form-bg: #ffffff05;
     }
