--- a/CSS/SCSS/sections/_contact.scss
+++ b/CSS/SCSS/sections/_contact.scss
@@ -1,7 +1,7 @@
 .main-section {
     background: var(--color-secondary-bg);
-    padding-bottom: 4rem;
-    margin-bottom: 10rem;
+    padding-bottom: 3rem;
+    margin-bottom: 3rem;
 }
 
 h1 {
@@ -12,6 +12,8 @@ h1 {
 h4 {
     margin: 0;
 }
+
+
 
 .contact-card {
     display: flex;
@@ -47,8 +49,9 @@ h4 {
 }
 
 .main-wrapper {
-    position: relative;
+    
     display: flex;
+    flex-direction: column;
     justify-content: space-between;
 }
 
@@ -57,18 +60,18 @@ h4 {
 }
 
 .consultation-card {
-    position: absolute;
-    right: 0;
-    top: 4rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     background-color: var(--color-white);
-    border-radius: .5rem;
     padding: 4rem;
-    width: 50%;
-    box-shadow: 0px 4.8px 24.4px -6px rgba(19, 16, 34, 0.10), 0px 4px 13px -2px rgba(19, 16, 34, 0.06);
+    border-radius: .5rem;
 }
+    
+    
+    
+    
+    
 
 .consultation-card button {
     background-color: var(--color-primary);
@@ -101,14 +104,18 @@ h4 {
 
 .map-wrapper {
     display: flex;
-    gap: 7rem;
-    padding-bottom: 30rem;
+    flex-direction: column;
+    
+    gap: 3rem;
+    padding-bottom: 15rem;
 }
 
 .flex-wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    align-items: center;
+    gap: 3rem;
 }
 
 .map {
@@ -145,6 +152,7 @@ h4 {
     gap: 1rem;
     margin-top: 5rem;
 }
+    
 
 .sm-icon {
     display: flex;
@@ -155,3 +163,78 @@ h4 {
     padding: .8rem;
 }
 
+@media (min-width: 768px){
+
+    .contact-wrapper {
+    display: flex;
+    gap: 1rem;
+}
+
+.contact-wrapper h1 {
+    width: 100%;
+}
+
+.consultation-card {
+    box-shadow: 0px 4.8px 24.4px -6px rgba(19, 16, 34, 0.10), 0px 4px 13px -2px rgba(19, 16, 34, 0.06);
+}
+
+.flex-wrapper {
+    align-items: normal;
+}
+
+.sm-icons {
+    margin-top: 4rem;
+}
+    
+    
+    
+}
+
+
+@media (min-width: 1400px){
+    .main-section {
+        background: var(--color-secondary-bg);
+        padding-bottom: 4rem;
+        margin-bottom: 10rem;
+    }
+    
+    .main-wrapper {
+        position: relative;
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .contact-wrapper {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+    
+    .consultation-card {
+        position: absolute;
+        right: 0;
+        top: 4rem;
+        display: flex;
+        flex-direction: column;
+        gap: 2rem;
+        background-color: var(--color-white);
+        border-radius: .5rem;
+        padding: 4rem;
+        width: 50%;
+        
+    }
+
+    .map-wrapper {
+        display: flex;
+        flex-direction: row;
+        gap: 7rem;
+        padding-bottom: 30rem;
+    }
+
+    .flex-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+
+}
