--- a/CSS/main.css
+++ b/CSS/main.css
@@ -1502,8 +1502,8 @@ header .container {
 }
 .main-section {
   background: var(--color-secondary-bg);
-  padding-bottom: 4rem;
-  margin-bottom: 10rem;
+  padding-bottom: 3rem;
+  margin-bottom: 3rem;
 }
 
 h1 {
@@ -1550,8 +1550,8 @@ h4 {
 }
 
 .main-wrapper {
-  position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
 }
 
@@ -1560,17 +1560,12 @@ h4 {
 }
 
 .consultation-card {
-  position: absolute;
-  right: 0;
-  top: 4rem;
   display: flex;
   flex-direction: column;
   gap: 2rem;
   background-color: var(--color-white);
-  border-radius: 0.5rem;
   padding: 4rem;
-  width: 50%;
-  box-shadow: 0px 4.8px 24.4px -6px rgba(19, 16, 34, 0.1), 0px 4px 13px -2px rgba(19, 16, 34, 0.06);
+  border-radius: 0.5rem;
 }
 
 .consultation-card button {
@@ -1604,14 +1599,17 @@ h4 {
 
 .map-wrapper {
   display: flex;
-  gap: 7rem;
-  padding-bottom: 30rem;
+  flex-direction: column;
+  gap: 3rem;
+  padding-bottom: 15rem;
 }
 
 .flex-wrapper {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  align-items: center;
+  gap: 3rem;
 }
 
 .map {
@@ -1656,4 +1654,63 @@ h4 {
   background-color: var(--color-secondary-bg);
   border-radius: 0.3rem;
   padding: 0.8rem;
+}
+
+@media (min-width: 768px) {
+  .contact-wrapper {
+    display: flex;
+    gap: 1rem;
+  }
+  .contact-wrapper h1 {
+    width: 100%;
+  }
+  .consultation-card {
+    box-shadow: 0px 4.8px 24.4px -6px rgba(19, 16, 34, 0.1), 0px 4px 13px -2px rgba(19, 16, 34, 0.06);
+  }
+  .flex-wrapper {
+    align-items: normal;
+  }
+  .sm-icons {
+    margin-top: 4rem;
+  }
+}
+@media (min-width: 1400px) {
+  .main-section {
+    background: var(--color-secondary-bg);
+    padding-bottom: 4rem;
+    margin-bottom: 10rem;
+  }
+  .main-wrapper {
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+  }
+  .contact-wrapper {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .consultation-card {
+    position: absolute;
+    right: 0;
+    top: 4rem;
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+    background-color: var(--color-white);
+    border-radius: 0.5rem;
+    padding: 4rem;
+    width: 50%;
+  }
+  .map-wrapper {
+    display: flex;
+    flex-direction: row;
+    gap: 7rem;
+    padding-bottom: 30rem;
+  }
+  .flex-wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+  }
 }/*# sourceMappingURL=main.css.map */
